Backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  type: NodePort
  ports:
    - name: backend
      protocol: TCP
      port: 80
      targetPort: 5001
      nodePort: 30001
