Backend/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "backend-ingress"
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "backend-service"
              servicePort: 30001
